--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Application
 spring.application.name=PsyTools
 spring.devtools.remote.debug.enabled=true
+app.saltkey=
 
 # Database
 spring.datasource.url=jdbc:mysql://localhost/psytools
